0.3.6:
- Volume keys behaviour can be customized to either zoom, switch tabs, navigate in history, or have default behaviour (e.g. change volume). Default is to change volume.
- Plugins management bugfixes.

0.3.5:
- Websites can be displayed in a "fake" mobile view, provided by Google GWT; This can be done on-demand, or automatically through in list of websites in preferences;
- Plugins support;
- Untrusted SSL certificates support;

0.3.4:
- By popular demand, added a "Close" button, althought i do not see the need for it :).
- Added "Home" button in url bar (can be hidden in preferences).
- Added "Clear cache on exit" option in privacy settings.
- Context menu for images and mailto links added.
- Text can be selected and copied to clipboard.
- Added notifications for download start/end.

0.3.3:
- Search can be done from the url bar. The search url is customizable.
- The start page can be customized.
- The start page can show a search box.
- The browser user agent can be customized.
- The ad blocker white list is now stored in database.
- Url bar now display favicons.
- Bookmarks can be exported to Android browser bookmarks.
- Improved suggestions in url bar, now search in history and bookmarks; better design.

0.3.2:
- Added start page, showing most used bookmarks and recent history.
- Bookmarks can be sorted by hit count.
- Change icon set to match Android guidelines.
- Added icons for mdpi/hdpi devices.
- Added changelog dialog.

0.3.1:
- Zoom by double-tap.
- Combined bookmarks/history window.
- Updated design.
- Move about dialog to preferences.
- Fix bug: sometimes a page load but do not show.

0.3.0:
- New design.
- Bugfix: FC at start-up for locale other than english/french.

0.2.9:
- Pinch zoom;
- "Bubble" position can be set to right, left or both.
- Bookmark import/export from/to SD card.
- Javascript prompt support;

0.2.8:
- VND url handler;
- Long back press quit application;
- Added french translation;

0.2.7: First public release.